Fix spacing icons

--- a/assets/css/animaciones.css
+++ b/assets/css/animaciones.css
@@ -13,12 +13,10 @@
 @keyframes mostrar {
     0% {
         opacity: 0;
-        transform: scale(0);
     }
 
     100% {
         opacity: 1;
-        transform: scale(1);
     }
 }
 
